--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,12 @@
 <h1>Editing Post</h1>
 
-<%= render 'form', post: @post %>
+<%= form_for @post do |f| %>
+   <%= f.label :title %>
+   <%= f.text_field :title %>
+   <br>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+   <%= f.label :description %>
+   <%= f.text_area :description %>
+
+   <%= f.submit %>
+<% end %>
